--- a/index.css
+++ b/index.css
@@ -1,3 +1,75 @@
-#heading {
-  color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid grey;
+  padding: 0 48px;
+}
+
+.logo {
+  width: 100px;
+}
+
+.nav-item-list {
+  display: flex;
+  gap: 24px;
+}
+
+.nav-item-list li {
+  list-style-type: none;
+  font-size: 20px;
+}
+
+.body {
+  margin-top: 24px;
+  padding: 0 48px;
+}
+
+.search-container {
+  margin: 24px 0;
+  display: flex;
+  gap: 12px;
+}
+
+.restaurant-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 40px;
+  border: 1px solid aliceblue;
+}
+
+.restaurant-card {
+  width: 240px;
+  padding: 16px;
+  background-color: aliceblue;
+  border-radius: 8px;
+}
+
+.restaurant-card-food-wrapper {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  border-radius: 16px;
+  overflow: hidden;
+  filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
+}
+
+.restaurant-card-food {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.restaurant-card-food:hover {
+  transform: scale(1.05);
+  transition: all 1s;
+}
+
+.restaurant-card-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.restaurant-card p {
+  margin: 4px;
 }
